chore(audit): 重构并完善审计模块 README 文档
- 增加模块简介与核心能力章节，详述审计注解、AOP切面和审计记录器设计
- 补全存储、分表策略、差异计算、敏感字段脱敏、审计查询与领域模型说明
- 新增事件监听、异步执行及示例代码，指导如何接入审计功能
- 更新配置项说明，增加异步批量写入及Disruptor支持细节
- 完善健康检查和SPI扩展点介绍，增强文档的可读性和指导性
- 明确依赖关系和注意事项，提升使用稳定性和运维体验